Explanation for the heat equation model

--- a/time_evolve.ipynb
+++ b/time_evolve.ipynb
@@ -26,6 +26,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "302513d3",
+   "metadata": {},
+   "source": [
+    "## The coupled equation setup\n",
+    "\n",
+    "The problem we are trying to solve belongs to the coupled system of equations which takes the form\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "m_u(s) \\frac{\\partial u}{\\partial t} &= k_{uu2}(s) \\frac{\\partial^2 u}{\\partial s^2} + k_{uu1}(s) \\frac{\\partial u}{\\partial s} + k_{uu0}(s) u + k_{ub1}(s) \\frac{\\partial b}{\\partial s} + k_{ub0}(s) b \\\\ \n",
+    "m_b(s) \\frac{\\partial b}{\\partial t} &= k_{bu1}(s) \\frac{\\partial u}{\\partial s} + k_{bu0}(s) u + k_{bb2}(s) \\frac{\\partial^2 b}{\\partial t^2} + k_{bb1}(s) \\frac{\\partial b}{\\partial s} + k_{bb0}(s) b\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "\n",
+    "This form can be used to describe many 1-D systems, e.g. torsional oscillation in the Earth's core, as well as the 1-D heat equation in two-phase medium, which takes the following form\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\frac{\\partial T_f}{\\partial t} + U_f \\frac{\\partial T_f}{\\partial s} = \\alpha_f \\frac{\\partial^2 T_f}{\\partial s^2} - h_f (T_f - T_s) \\\\ \n",
+    "\\frac{\\partial T_s}{\\partial t} = \\alpha_s \\frac{\\partial^2 T_s}{\\partial s^2} + h_s (T_f - T_s)\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "where $U_f$ is the fluid velocity, $\\alpha$ the thermal diffusivity, $h$ the coupling factor. This set of equations describe the scenario where a hot fluid with a background velocity $U_f$ flows through a solid medium, and exchanges heat with the solid. $T_f$ and $T_s$ are the fluid and solid temperatures, respectively.\n",
+    "\n",
+    "Two conventional numerical methods, i.e. spectral method and finite-element method (FEM), have been used to solve this set of equations. The code for spectral method is given in `thermal_2phase.py`, and the FEM code is given in `thermal_2phase_fem.py`. The coefficients are set up in `config_2phase.py`. The part of the code which calculates and assembles the matrices is almost exactly the same as used in solving eigenmodes of torsional Alfven waves (see `taw_eigen_spectrum.py` and `taw_eigen_fem.py`, respectively), except for the configuration file for the coefficients. The difference is that the latter two are eigenvalue solvers, while the former two include time steppers. An implicit backward Euler time stepper is used for the coupled heat equation problem."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "5660d2e4-96ed-48d5-ad9b-b2d618c9024e",
